@@ -4,10 +4,12 @@ module CucumberFM
     TAG_PATTERN = CucumberFM::FeatureElement::Component::Tags::TAG_PATTERN
     AND_PATTERN = /\s+/
     OR_PATTERN = /,/
+    NOT_PATTERN = /~/
 
     TOKEN = Regexp.union(TAG_PATTERN,
                          AND_PATTERN,
-                         OR_PATTERN)
+                         OR_PATTERN,
+                         NOT_PATTERN)
 
     def pass?(tags)
       if expression.nil? or expression.empty?
@@ -25,6 +27,7 @@ module CucumberFM
     def evaluate_expression(tags)
       buffer = nil
       buffer_array = []
+      buffer_negation = nil
 
       text = expression
       while token = text.match(TOKEN)
@@ -33,17 +36,23 @@ module CucumberFM
           when TAG_PATTERN
             throw "Error at #{expression} | token: #{token[0]} | last token: #{buffer}" unless buffer.nil?
             buffer = token[0]
+          when NOT_PATTERN
+            buffer_negation = true
           when AND_PATTERN
             if buffer_array.empty? and buffer
-              return(false) unless tags.include? buffer
+              return(false) unless (!buffer_negation == tags.include?(buffer))
               buffer = nil
+              buffer_negation = nil
+              true
             elsif !buffer_array.empty?
               if buffer
                 buffer_array.push(buffer)
                 buffer = nil
               end
-              return(false) unless buffer_array.any? { |tag| tags.include? tag }
+              return(false) unless (!buffer_negation == buffer_array.any? { |tag| tags.include? tag })
               buffer_array = []
+              buffer_negation = nil
+              true
             else
               true
             end
@@ -56,16 +65,18 @@ module CucumberFM
       end
 
       if buffer_array.empty? and buffer
-        return(false) unless tags.include? buffer
+        return(false) unless (!buffer_negation == tags.include?(buffer))
         buffer = nil
+        buffer_negation = nil
         true
       elsif !buffer_array.empty?
         if buffer
           buffer_array.push(buffer)
           buffer = nil
         end
-        return(false) unless buffer_array.any? { |tag| tags.include? tag }
+        return(false) unless (!buffer_negation == buffer_array.any? { |tag| tags.include? tag })
         buffer_array = []
+        buffer_negation = nil
         true
       else
         true
